<resources>
    <string name="app_name">WebLauncher</string>

    <string name="dummy_button" translatable="false">Dummy Button</string>
    <string name="dummy_content" translatable="false">DUMMY\nCONTENT</string>
    <string name="action_settings">Settings</string>
    <string name="default_url" translatable="false">https://www.hardill.me.uk/wordpress/2016/11/25/auto-launch-webpages-full-screen-on-android/</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_launch_on_start">Launch on Start</string>
    <string name="title_lock_screen_on">Lock screen on</string>
    <string name="title_auto_play_video">Auto Play Video</string>
    <string name="title_allow_private_certs">Trust All Certificates</string>
    <string name="about">About</string>
    <string name="about_html">&lt;html&gt;
&lt;body&gt;
&lt;h1&gt;About&lt;/h1&gt;

&lt;h2&gt;License&lt;/h2&gt;
&lt;p&gt;Copyright 2019-2025 Benjamin Hardill&lt;/p&gt;

&lt;p&gt;Licensed under the Apache License, Version 2.0 (the &quot;License&quot;);
you may not use this file except in compliance with the License.
You may obtain a copy of the License at&lt;/p&gt;

&lt;p&gt;    &lt;a href=&quot;http://www.apache.org/licenses/LICENSE-2.0&quot;&gt;http://www.apache.org/licenses/LICENSE-2.0&lt;/a&gt;&lt;/p&gt;

&lt;p&gt;Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an &quot;AS IS&quot; BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License.&lt;/p&gt;

&lt;h2&gt;Attribution&lt;/h2&gt;
Icon made by &lt;a href=&quot;http://www.freepik.com/&quot;&gt;Freepik&lt;/a&gt; from &lt;a href=&quot;http://www.flaticon.com/&quot;&gt;www.flaticon.com&lt;/a&gt;
&lt;/body&gt;
&lt;/html&gt;</string>
    <string name="https_error_html">&lt;html&gt;
&lt;body&gt;
&lt;h1&gt;HTTPS Certificate Error&lt;/h1&gt;

&lt;p&gt;The server certificate is not valid.&lt;/p&gt;
&lt;p&gt;You can disable checking in the Settings&lt;/p&gt;
&lt;/body&gt;
&lt;/html&gt;</string>
    <string name="title_enable_upnp_renderer">Enable UPnP Audio Renderer</string>
    <string name="title_renderer_name">Renderer Name</string>
    <string name="title_url">URL</string>
    <string name="title_language">Language</string>
    <string name="language_english">English</string>
    <string name="language_german">Deutsch</string>
    <string name="language_russian">Русский</string>
    <string-array name="language_entries">
        <item>@string/language_english</item>
        <item>@string/language_german</item>
        <item>@string/language_russian</item>
    </string-array>
    <string-array name="language_values">
        <item>en</item>
        <item>de</item>
        <item>ru</item>
    </string-array>
    <string name="title_theme">Theme</string>
    <string name="theme_light">Light</string>
    <string name="theme_dark">Dark</string>
    <string name="theme_auto">Auto</string>
    <string-array name="theme_entries">
        <item>@string/theme_light</item>
        <item>@string/theme_dark</item>
        <item>@string/theme_auto</item>
    </string-array>
    <string-array name="theme_values">
        <item>light</item>
        <item>dark</item>
        <item>auto</item>
    </string-array>
    <string name="title_media_player">Media Player</string>
    <string name="title_ui_size">UI Size</string>
    <string name="ui_size_small">Small</string>
    <string name="ui_size_normal">Normal</string>
    <string name="ui_size_large">Large</string>
    <string-array name="ui_size_entries">
        <item>@string/ui_size_small</item>
        <item>@string/ui_size_normal</item>
        <item>@string/ui_size_large</item>
    </string-array>
    <string-array name="ui_size_values">
        <item>small</item>
        <item>normal</item>
        <item>large</item>
    </string-array>
    <string name="title_http_port">HTTP Port</string>
    <string name="close">Close</string>

</resources>
